So, that's what I forgot yesterday

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -1018,7 +1018,7 @@ worldnews.305.e:0 "This is a serious problem, we are going to have to intervene,
 worldnews.305.f:0 "Whoever controls Washington D.C. controls America. At least once the fighting is over."
 
 worldnews.306.t:0 "The Fall of Denver" #PSA
-worldnews.306.d:0 "Californian conscripts have been fighting long, difficult skirmishes with the Federal Goverment across the Rockies. Today, their efforts are crowned as they finally descended on the city of Denver after a large scale assault across the South Platte River, Denver being the capital of Colorado and the main Federal stronghold in the Great Plains. The fall of the Queen City of the Plains indeed seems to be a major upset for the future of the United States, and as fighting dies down in the South Platte valley, many experts agree that the Federal government is now almost certain to come to terms with the Californians."
+worldnews.306.d:0 "Californian conscripts have been fighting long, difficult skirmishes with the Federal Goverment across the Rockies. Today, their efforts are crowned as they finally descended on the city of Denver after a large scale assault across the South Platte River, Denver being the capital of Colorado and the main Federal stronghold in the Great Plains.\n\nThe fall of the Queen City of the Plains indeed seems to be a major upset for the future of the United States, and as fighting dies down in the South Platte valley, many experts agree that the Federal government is now almost certain to come to terms with the Californians."
 worldnews.306.a:0 "The Californians will not make it far out of the Rockies!"
 worldnews.306.b:0 "The gate to the Great Plains is ours. Now, let us enter."
 worldnews.306.c:0 "The Californians are progressing rapidly. We might have to stop them."
@@ -1026,7 +1026,7 @@ worldnews.306.e:0 "The Pacific States turn out to be more powerful than expected
 worldnews.306.f:0 "With Denver in their hands, the Pacific States hold the Rockies and West Coast firmly."
 
 worldnews.307.t:0 "The Fall of Denver" #CSA
-worldnews.307.d:0 "Syndicate militias have been fighting sparse skirmishes with the Federal Goverment across the Great Plains. Today, their efforts are crowned as they finally descended on the city of Denver after a large scale assault across the South Platte Valley, Denver being the capital of Colorado and the main Federal stronghold in the Great Plains. The fall of the Queen City of the Plains indeed seems to be a major upset for the future of the United States, and as fighting dies down in the South Platte valley, many experts agree that the Federal government is now almost certain to capitulate to the Syndicate."
+worldnews.307.d:0 "Syndicate militias have been fighting sparse skirmishes with the Federal Goverment across the Great Plains. Today, their efforts are crowned as they finally descended on the city of Denver after a large scale assault across the South Platte Valley, Denver being the capital of Colorado and the main Federal stronghold in the Great Plains.\n\nThe fall of the Queen City of the Plains indeed seems to be a major upset for the future of the United States, and as fighting dies down in the South Platte valley, many experts agree that the Federal government is now almost certain to capitulate to the Syndicate."
 worldnews.307.a:0 "The Syndicate will not make it any further West!"
 worldnews.307.b:0 "The gate to the Rockies is ours. Now, let us enter."
 worldnews.307.c:0 "The Syndicate is preparing to cross the Rockies. We must do something!"
@@ -1034,7 +1034,7 @@ worldnews.307.e:0 "The Pacific States are under threat of the Syndicate. This is
 worldnews.307.f:0 "With Denver in their hands, the Confederate States secure the Great Plains."
 
 worldnews.308.t:0 "The Fall of Denver" #AUS
-worldnews.308.d:0 "Minutemen militias have been fighting sparse skirmishes with the Federal Goverment across the Great Plains. Today, their efforts are crowned as they finally descended on the city of Denver after a large scale assault across the South Platte Valley, Denver being the capital of Colorado and the main Federal stronghold in the Great Plains. The fall of the Queen City of the Plains indeed seems to be a major upset for the future of the United States, and as fighting dies down in the South Platte valley, many experts agree that the Federal government is now almost certain to capitulate to the Minutemen."
+worldnews.308.d:0 "Minutemen militias have been fighting sparse skirmishes with the Federal Goverment across the Great Plains. Today, their efforts are crowned as they finally descended on the city of Denver after a large scale assault across the South Platte Valley, Denver being the capital of Colorado and the main Federal stronghold in the Great Plains.\n\nThe fall of the Queen City of the Plains indeed seems to be a major upset for the future of the United States, and as fighting dies down in the South Platte valley, many experts agree that the Federal government is now almost certain to capitulate to the Minutemen."
 worldnews.308.a:0 "The Syndicate will not make it any further West!"
 worldnews.308.b:0 "The gate to the Rockies is ours. Now, let us enter."
 worldnews.308.c:0 "The Syndicate is preparing to cross the Rockies. We must do something!"
@@ -1042,14 +1042,14 @@ worldnews.308.e:0 "The Pacific States are under threat of the Syndicate. This is
 worldnews.308.f:0 "With Denver in their hands, the Confederate States secure the Great Plains."
 
 worldnews.309.t:0 "The Fall of Denver" #Canada
-worldnews.309.d:0 "Canadian forces have been fighting sparse skirmishes with the Federal Goverment across the Great Plains. Today, their efforts are crowned as they finally descended on the city of Denver after a large scale assault along the South Platte Valley, Denver being the capital of Colorado and the main Federal stronghold in the Great Plains. The fall of the Queen City of the Plains indeed seems to be a major upset for the future of the United States, and as fighting dies down in the South Platte valley, many experts agree that Canada indisputably controls the Great Plains, if not more."
+worldnews.309.d:0 "Canadian forces have been fighting sparse skirmishes with the Federal Goverment across the Great Plains. Today, their efforts are crowned as they finally descended on the city of Denver after a large scale assault along the South Platte Valley, Denver being the capital of Colorado and the main Federal stronghold in the Great Plains.\n\nThe fall of the Queen City of the Plains indeed seems to be a major upset for the future of the United States, and as fighting dies down in the South Platte valley, many experts agree that Canada indisputably controls the Great Plains, if not more."
 worldnews.309.a:0 "The Canadians strike the Great Plains, but they will not divide us!"
 worldnews.309.b:0 "With this city under lock, we hold the Great Plains tightly."
 worldnews.309.c:0 "The Federal Government is letting Canada split us East and West!"
 worldnews.309.e:0 "With Denver in their hands, Canada secures the Great Plains."
 
 worldnews.310.t:0 "The Fall of Denver" #Mexico
-worldnews.310.d:0 "Mexican forces have been fighting sparse skirmishes with the Federal Goverment across the Great Plains. Today, their efforts are crowned as they finally descended on the city of Denver after a large scale assault along the South Platte Valley, Denver being the capital of Colorado and the main Federal stronghold in the Great Plains. The fall of the Queen City of the Plains indeed seems to be a major upset for the future of the United States, and as fighting dies down in the South Platte valley, many experts agree that Mexico is well on its way to slice the United States in half."
+worldnews.310.d:0 "Mexican forces have been fighting sparse skirmishes with the Federal Goverment across the Great Plains. Today, their efforts are crowned as they finally descended on the city of Denver after a large scale assault along the South Platte Valley, Denver being the capital of Colorado and the main Federal stronghold in the Great Plains.\n\nThe fall of the Queen City of the Plains indeed seems to be a major upset for the future of the United States, and as fighting dies down in the South Platte valley, many experts agree that Mexico is well on its way to slice the United States in half."
 worldnews.310.a:0 "The Mexicans strike the Great Plains, but they will not divide us!"
 worldnews.310.b:0 "With this city under lock, we are about to split all of America in half."
 worldnews.310.c:0 "The Federal Government is letting Mexico split us East and West!"
@@ -1057,7 +1057,7 @@ worldnews.310.e:0 "Mexico is now a serious contender in the Civil War."
 worldnews.310.f:0 "With Denver in their hands, Mexico is about to cut through the entire US."
 
 worldnews.311.t:0 "The Fall of Sacramento" #United States
-worldnews.311.d:0 "Federal forces have been fighting long, difficult skirmishes with Californian conscripts across the Rockies. Today, their efforts are crowned as they finally descended on the city of Sacramento after a large scale assault across the American River, it being the capital of California and the seat of the Californian State Capitol. While not a strategically important city, it signifies a Federal hold over the Rockies, and as the entire Central Valley now opens up to the Federal troops, many experts agree that the Californians would be wise to come to terms with the Federal Government."
+worldnews.311.d:0 "Federal forces have been fighting long, difficult skirmishes with Californian conscripts across the Rockies. Today, their efforts are crowned as they finally descended on the city of Sacramento after a large scale assault across the American River, it being the capital of California and the seat of the Californian State Capitol.\n\nWhile not a strategically important city, it signifies a Federal hold over the Rockies, and as the entire Central Valley now opens up to the Federal troops, many experts agree that the Californians would be wise to come to terms with the Federal Government."
 worldnews.311.a:0 "The Federal Government would be wise not to get ahead of itself."
 worldnews.311.b:0 "We are out of the Rockies and in California Proper. Now they tremble."
 worldnews.311.c:0 "The Federal Government is distracted with their Californian Gold Rush!"
@@ -1065,7 +1065,7 @@ worldnews.311.e:0 "The Federal Government stands ready to deal a crippling blow 
 worldnews.311.f:0 "With Sacramento in their hands, the Federal Government threatens California."
 
 worldnews.312.t:0 "The Fall of Sacramento" #CSA
-worldnews.312.d:0 "Syndicate militias have been fighting long, difficult skirmishes with Californian conscripts across the Rockies. Today, their efforts are crowned as they finally descended on the city of Sacramento after a large scale assault across the American River, it being the capital of California and the seat of the Californian State Capitol. While not a strategically important city, it signifies a Syndicate hold over the Rockies, and as the entire Central Valley now opens up to the Syndicate militias, many experts agree that the Californians would be wise to come to terms with the Syndicate."
+worldnews.312.d:0 "Syndicate militias have been fighting long, difficult skirmishes with Californian conscripts across the Rockies. Today, their efforts are crowned as they finally descended on the city of Sacramento after a large scale assault across the American River, it being the capital of California and the seat of the Californian State Capitol.\n\nWhile not a strategically important city, it signifies a Syndicate hold over the Rockies, and as the entire Central Valley now opens up to the Syndicate militias, many experts agree that the Californians would be wise to come to terms with the Syndicate."
 worldnews.312.a:0 "The Syndicate would be wise not to get ahead of itself."
 worldnews.312.b:0 "We are out of the Rockies and in California Proper. Now they tremble."
 worldnews.312.c:0 "The Syndicate is distracted with their Californian Gold Rush!"
@@ -1073,7 +1073,7 @@ worldnews.312.e:0 "The Syndicate stands ready to deal a crippling blow to Califo
 worldnews.312.f:0 "With Sacramento in their hands, the Syndicate threatens California."
 
 worldnews.313.t:0 "The Fall of Sacramento" #AUS
-worldnews.313.d:0 "Minuteman militias have been fighting long, difficult skirmishes with Californian conscripts across the Rockies. Today, their efforts are crowned as they finally descended on the city of Sacramento after a large scale assault across the American River, it being the capital of California and the seat of the Californian State Capitol. While not a strategically important city, it signifies a Minuteman hold over the Rockies, and as the entire Central Valley now opens up to the Minuteman militias, many experts agree that the Californians would be wise to come to terms with the Minutemen."
+worldnews.313.d:0 "Minuteman militias have been fighting long, difficult skirmishes with Californian conscripts across the Rockies. Today, their efforts are crowned as they finally descended on the city of Sacramento after a large scale assault across the American River, it being the capital of California and the seat of the Californian State Capitol.\n\nWhile not a strategically important city, it signifies a Minuteman hold over the Rockies, and as the entire Central Valley now opens up to the Minuteman militias, many experts agree that the Californians would be wise to come to terms with the Minutemen."
 worldnews.313.a:0 "The Minutemen would be wise not to get ahead of themselves."
 worldnews.313.b:0 "We are out of the Rockies and in California Proper. Now they tremble."
 worldnews.313.c:0 "The Minutemen are distracted with their Californian Gold Rush!"
@@ -1081,14 +1081,14 @@ worldnews.313.e:0 "The Minutemen stand ready to deal a crippling blow to Califor
 worldnews.313.f:0 "With Sacramento in their hands, the Minutemen threaten California."
 
 worldnews.314.t:0 "The Fall of Sacramento" #Canada
-worldnews.314.d:0 "Canadian troops have been fighting a long campaign across the West Coast with some skirmishes in the Rockies. Today, their efforts are crowned as they finally descended on the city of Sacramento after a large scale assault across the Sacramento River, it being the capital of California and the seat of the Californian State Capitol. While not a strategically important city, it signifies a Canadian entrance into California Proper as they hold the northern half of the state and close in on San Francisco. Many experts agree that the Californians would be wise to come to terms with Canada."
+worldnews.314.d:0 "Canadian troops have been fighting a long campaign across the West Coast with some skirmishes in the Rockies. Today, their efforts are crowned as they finally descended on the city of Sacramento after a large scale assault across the Sacramento River, it being the capital of California and the seat of the Californian State Capitol.\n\nWhile not a strategically important city, it signifies a Canadian entrance into California Proper as they hold the northern half of the state and close in on San Francisco. Many experts agree that the Californians would be wise to come to terms with Canada."
 worldnews.314.a:0 "The Canadians would be wise not to get ahead of themselves."
 worldnews.314.b:0 "We finally control the Central Valley. San Francisco is close."
 worldnews.314.c:0 "Canada is plowing through the West Coast. We must do something!"
 worldnews.314.e:0 "With Sacramento in their hands, Canada is almost done with California."
 
 worldnews.315.t:0 "The Fall of Sacramento" #Mexico
-worldnews.315.d:0 "Mexican troops have been fighting a long campaign across the West Coast with some skirmishes in the Rockies. Today, their efforts are crowned as they finally descended on the city of Sacramento after a large scale assault across the San Joaquin River, it being the capital of California and the seat of the Californian State Capitol. While not a strategically important city, it signifies a total hold of the Mexicans on the entire Californian state, from North to South. Many experts agree that a Californian capitulation is now imminent, as their troops flee northwards still."
+worldnews.315.d:0 "Mexican troops have been fighting a long campaign across the West Coast with some skirmishes in the Rockies. Today, their efforts are crowned as they finally descended on the city of Sacramento after a large scale assault across the San Joaquin River, it being the capital of California and the seat of the Californian State Capitol.\n\nWhile not a strategically important city, it signifies a total hold of the Mexicans on the entire Californian state, from North to South. Many experts agree that a Californian capitulation is now imminent, as their troops flee northwards still."
 worldnews.315.a:0 "We will fight the Mexicans all the way to Seattle if need be."
 worldnews.315.b:0 "We are across San Joaquin River. All of California is ours."
 worldnews.315.c:0 "Mexico is plowing through the West Coast. We must do something!"
