Small MAF changes

--- a/localisation/KR_Mittelafrika_l_english.yml
+++ b/localisation/KR_Mittelafrika_l_english.yml
@@ -33,7 +33,7 @@ MAF_Logging1:0 "Mittelafrikan Wood"
 ### Parties ###
 MAF_authoritarian_democrat_party:0 "Schutzgebietsverwaltung"
 MAF_paternal_autocrat_party:0 "Schutzgebietsverwaltung"
-MAF_social_conservative_party:0 "Bundeskolonialverwaltung"
+MAF_social_conservative_party:0 "Kolonialbundverwaltung"
 MAF_national_populist_party:0 "DAP"
 MAF_national_populist_party_long:0 "Deutsche Afrikapartei"
 MAF_radical_socialist_party:0 "AFP"
@@ -158,10 +158,10 @@ MAF_Oil_In_Nigeria:0 "Oil In Nigeria"
 MAF_Mines_In_The_Kongo:0 "Mines In The Kongo"
 MAF_Kolwezi_Dam:0 "Kolwezi Dam"
 MAF_Industralise_Afrika:0 "Industrialise Afrika"
-MAF_Armament_Effort_I:0 "Armament Effort I"
-MAF_Armament_Effort_II:0 "Armament Effort II"
-MAF_Construction_Effort_I:0 "Construction Effort I"
-MAF_Construction_Effort_II:0 "Construction Effort II"
+MAF_Armament_Effort_I:0 "Colonial Armouries"
+MAF_Armament_Effort_II:0 "Colonial Manufacturers"
+MAF_Construction_Effort_I:0 "Immigration Grants"
+MAF_Construction_Effort_II:0 "Support New Citizens"
 MAF_Connect_The_Colonies:0 "Connect The Colonies"
 MAF_Uni_Focus:0 "Deutsche Afrikanische Universität"
 MAF_Mil_Focus:0 "Military Question"
@@ -184,7 +184,7 @@ MAF_Germany_Honours_Heroes:0 "Deutschland Ehrt Seine Helden"
 MAF_Secret_Police:0 "Establish the Deutsche Geheimpolizei"
 MAF_Supress_Natives:0 "Suppress Native Revolts"
 MAF_Forced_Labour:0 "Arbeit Macht Frei"
-MAF_Ban_European_Languages:0 "Ban European Languages"
+MAF_Ban_European_Languages:0 "Ban Other European Languages"
 MAF_Goering:0 "Herrschaft Görings"
 MAF_Appoint_DAP_Governors:0 "Appoint DAP Governors"
 MAF_Bring_The_DAP_Into_Government:0 "Bring The DAP Into Government"
